# librpgcore

./: .gitignore  LICENSE  README.md  meson.build
lib/: Dice.vala  meson.build
lib/data/: OGLv1.0a.txt  com.friendofentropy.librpgcore.gresource.xml  librpgcore.gresource.xml
lib/data/msrd/: MutationsBeneficial.json
lib/data/ogl/: MutationsBeneficial.json  MutationsDefects.json
lib/src/: Ability.vala  AbilityGenerator.vala  Character.vala  CharacterGenerator.vala  Dice.vala  Mutation.vala  MutationGenerator.vala
test/: AbilityGeneratorTests.vala  AbilityTests.vala  AbstractTestCase.vala  CharacterGeneratorTests.vala  DiceTests.vala  MutationGeneratorTests.vala  TestRunner.vala  meson.build
